--- a/New folder/stylelogin.css
+++ b/New folder/stylelogin.css
@@ -106,6 +106,11 @@ body {
     font-weight: 600;
 }
 
+.wrapper .btn a {
+    text-decoration: none;
+    color: #333;
+}
+
 .wrapper .register-link {
     font-size: 14.5px;
     text-align: center;
