--- a/styles/login.css
+++ b/styles/login.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(img/bg/bglogin.jpg) no-repeat;
+    background: url(../assets/img/bg/bglogin.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
