--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -306,8 +306,8 @@ footer p {
 
 .dash-side-bar {
     width: 15%;
-    height: auto;
-    background-color: #00ffff;
+    height: 80%;
+    background-color:  rgb(141, 232, 221);
     display: flex;
     flex-direction: column;
 }
@@ -339,7 +339,7 @@ footer p {
 .dash-nav-bar {
     width: auto;
     padding: 16px;
-    background-color: white;
+    background-color: rgb(141, 232, 221);
     display: flex;
     justify-content: space-between;
 }
@@ -492,7 +492,7 @@ footer p {
     #burgerbar {
         display: block;
         width: 36px;
-        background-color: white;
+        background-color: rgb(252, 253, 254);
         border: none;
         cursor: pointer;
     }
