--- a/styles/regis.css
+++ b/styles/regis.css
@@ -4,7 +4,10 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+
 }
+
+
 body {
     display: flex;
     justify-content: center;
@@ -19,16 +22,23 @@ body {
     width: 400px;
     margin-block: 8px;
     padding: 12px;
-    border: 1px solid #ABABAB;
+    border: 1px solid #2f2e2e;
     border-radius: 4px;
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
+    text-shadow: 
+      -1px -1px 0 #000,  
+       1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000
+
     
 }
 
 .textfield:focus {
     border: 1px solid transparent;
-    outline: 1.5px solid #52b8ef;
+    outline: 1.5px solid rgb(45, 167, 224);
+    
 }
 
 
@@ -54,6 +64,7 @@ body {
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
+    
 
 }
 
