--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -13,7 +13,7 @@ nav {
     justify-content: space-between;
     align-items: center;
 }
-/* ss */
+/* ssssaasas */
 .top-nav {
     flex-basis: 20%;
 }
