--- a/styles/status.css
+++ b/styles/status.css
@@ -1,6 +1,6 @@
 .dash-main {
-  
-    margin-left: 1150px;
+    width: 1100px;
+    margin-left: 150px;
     padding: 100px;
     border-radius: 16px;
     background-color: white;
@@ -11,7 +11,7 @@
 }
 
 .dash-main table {
-    width: 80%;
+    width: 90%;
     border: 2px solid #ABABAB;
     border-collapse: collapse;
 }
