--- a/styles/status.css
+++ b/styles/status.css
@@ -29,5 +29,26 @@
     text-align: center;
 }
 
+.wrapper .btn {
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
+    background: rgb(45, 167, 224);
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
+
+.wrapper .btn a {
+    text-decoration: none;
+    color: #292929;
+   
+}
+
 
 
