--- a/styles/main.css
+++ b/styles/main.css
@@ -125,7 +125,26 @@ body {
 .card-content p {
     color: #555;
 }
+.wrappers .btn1 {
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
+    background: rgb(45, 167, 224);
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
 
+.wrappers .btn1 a {
+    text-decoration: none;
+    color: #292929;
+   
+}
 /* ... (rest of the styles) */
 
 
