--- a/styles/status.css
+++ b/styles/status.css
@@ -19,7 +19,7 @@
 .dash-main table thead {
     background-color: #EFEFEF;
 }
-
+/*  */
 .dash-main table th, td {
     padding: 8px;
     border: 1px solid #ABABAB;
