--- a/styles/regis.css
+++ b/styles/regis.css
@@ -18,6 +18,15 @@ body {
     background-position: center;
 }
 
+.textfield {
+    width: 400px;
+    margin-block: 8px;
+    padding: 12px;
+    border: 1px solid #2f2e2e;
+    border-radius: 4px;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px; 
+}
 
 .textfield:focus {
     border: 1px solid transparent;
