--- a/styles/updet.css
+++ b/styles/updet.css
@@ -7,8 +7,8 @@ body {
 }
 
 .navbar {
-    background: transparent;
-    color: white;
+    background: #ffffff;
+    color: rgb(255, 255, 255);
     text-align: right;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
