--- a/styles/page2.css
+++ b/styles/page2.css
@@ -1,8 +1,9 @@
-body
-{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+body {
+   font-family: Arial, sans-serif;
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
+   margin: 0;
 }
 
 .cons {
