--- a/styles/updet.css
+++ b/styles/updet.css
@@ -1,12 +1,6 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-}
 
-.navbar {
+
+.navbar1 {
     background: #ffffff;
     color: rgb(255, 255, 255);
     text-align: right;
@@ -17,15 +11,17 @@ body {
     top: 0; /* Position the navbar at the top of the screen */
 }
 
-.navbar a {
+.navbar1 a {
     color: rgb(0, 0, 0);
     text-decoration: none;
     margin: 0 10px;
    /* margin-right: 100px; */
 }
-
-
-.navbar a:hover {
+h3 {
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+.navbar1 a:hover {
     color: orange;  
 }
 
@@ -61,7 +57,7 @@ body {
 }
 
 
-.content {
+.content1 {
     padding: 10px;
     margin-left: 220px;
     margin-right: 20px;
@@ -72,7 +68,7 @@ body {
     justify-content: space-between; /* Ensure equal spacing between the cards */
 }
 
-.content h2 {
+.content1 h2 {
     color: #000000;
     height: 100px;
     width: 1000px;
@@ -110,16 +106,16 @@ body {
     max-width: 50px;
 }
 
-.card-content {
+.card-content1 {
     flex: 1;
 }
 
-.card-content h3 {
+.card-content1 h3 {
     margin: 0;
     color: #333;
 }
 
-.card-content p {
+.card-content1 p {
     color: #555;
 }
 
@@ -220,3 +216,11 @@ div {
             border-radius: 5px;
             cursor: pointer;
         }
+
+.row {
+    width: 100%;
+}
+
+.g-3 {
+    width: 1000%;
+}
