--- a/styles/updet.css
+++ b/styles/updet.css
@@ -1,8 +1,14 @@
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
 
-
-.navbar1 {
-    background: #ffffff;
-    color: rgb(255, 255, 255);
+.navbar {
+    background: transparent;
+    color: white;
     text-align: right;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -11,17 +17,15 @@
     top: 0; /* Position the navbar at the top of the screen */
 }
 
-.navbar1 a {
+.navbar a {
     color: rgb(0, 0, 0);
     text-decoration: none;
     margin: 0 10px;
    /* margin-right: 100px; */
 }
-h3 {
-    margin-bottom: 50px;
-    margin-top: 50px;
-}
-.navbar1 a:hover {
+
+
+.navbar a:hover {
     color: orange;  
 }
 
@@ -57,7 +61,7 @@ h3 {
 }
 
 
-.content1 {
+.content {
     padding: 10px;
     margin-left: 220px;
     margin-right: 20px;
@@ -68,7 +72,7 @@ h3 {
     justify-content: space-between; /* Ensure equal spacing between the cards */
 }
 
-.content1 h2 {
+.content h2 {
     color: #000000;
     height: 100px;
     width: 1000px;
@@ -106,16 +110,16 @@ h3 {
     max-width: 50px;
 }
 
-.card-content1 {
+.card-content {
     flex: 1;
 }
 
-.card-content1 h3 {
+.card-content h3 {
     margin: 0;
     color: #333;
 }
 
-.card-content1 p {
+.card-content p {
     color: #555;
 }
 
@@ -216,11 +220,3 @@ div {
             border-radius: 5px;
             cursor: pointer;
         }
-
-.row {
-    width: 100%;
-}
-
-.g-3 {
-    width: 1000%;
-}
