--- a/styles/about.css
+++ b/styles/about.css
@@ -5,7 +5,7 @@ body {
     min-height: 100vh;
     margin: 0;
 }
-
+/* wd */
 .navbar {
     background: white;
     color: black; /* Set the text color to ensure visibility on white background */
