--- a/styles/updet.css
+++ b/styles/updet.css
@@ -5,10 +5,17 @@ body {
     min-height: 100vh;
     margin: 0;
 }
-
-.navbar {
-    background: transparent;
-    color: white;
+.content .wrapper{
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    width: 100%; /* Ensure the navbar takes the full width of the screen */
+    align-items: center;
+    padding: 10px;
+}  
+.navbar1 {
+    background: #ffffff;
+    color: rgb(255, 255, 255);
     text-align: right;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -17,7 +24,7 @@ body {
     top: 0; /* Position the navbar at the top of the screen */
 }
 
-.navbar a {
+.navbar1 a {
     color: rgb(0, 0, 0);
     text-decoration: none;
     margin: 0 10px;
@@ -31,6 +38,10 @@ body {
 
 .container {
     display: flex;
+}
+.content1 h3 {
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .sidebar {
@@ -61,24 +72,25 @@ body {
 }
 
 
-.content {
-    padding: 10px;
-    margin-left: 220px;
-    margin-right: 20px;
-    flex: 1;
-    margin-top: 40px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* Ensure equal spacing between the cards */
-}
 
-.content h2 {
-    color: #000000;
-    height: 100px;
-    width: 1000px;
-    margin-left: 40%;
-    font-weight: 50;
-}
+    .content1 {
+        padding: 10px;
+        margin-left: 220px;
+        margin-right: 20px;
+        flex: 1;
+        margin-top: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between; /* Ensure equal spacing between the cards */
+    }
+
+    .content1 h2 {
+        color: #000000;
+        height: 100px;
+        width: 1000px;
+        margin-left: 40%;
+        font-weight: 50;
+    }
 
 .h2 {
     font-weight: 1000;
@@ -110,16 +122,16 @@ body {
     max-width: 50px;
 }
 
-.card-content {
+.card-content1 {
     flex: 1;
 }
 
-.card-content h3 {
+.card-content1 h3 {
     margin: 0;
     color: #333;
 }
 
-.card-content p {
+.card-content1 p {
     color: #555;
 }
 
@@ -156,7 +168,13 @@ div {
             flex-direction: column;
             align-items: center;
         }
-
+        .row {
+            width: 100%;
+        }
+        
+        .g-3 {
+            width: 1000%;
+        }
         /* Gaya CSS untuk formulir */
         form {
             border: 1px solid #ccc;
